--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Projects#index</h1>
-<p>Find me in app/views/projects/index.html.erb</p>
+<div class="container">
+  <% @projects.each do |project| %>
+    <h2><%= project.title %></h2>
+    <p><%= project.description %></p>
+    <p><%= project.link %></p>
+    <p><%= project.expiration %></p>
+  <% end %>
+</div>
