begin tags for projects

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -7,6 +7,6 @@
   <%= f.input :link %>
   <%= f.association :fondation %>
   <%= f.association :category %>
-
+  <%= f.input :all_tags %>
   <%= f.button :submit %>
 <% end %>
