--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -7,6 +7,6 @@
   <%= f.input :link %>
   <%= f.association :fondation %>
   <%= f.association :category %>
-  <%= f.input :all_tags %>
+  <%= f.input :all_tags, placeholder: "Tags séparées par une virgule" %>
   <%= f.button :submit %>
 <% end %>
