--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,8 +1,13 @@
 <div class="container">
   <% @projects.each do |project| %>
-    <h2><%= project.title %></h2>
-    <p><%= project.description %></p>
-    <p><%= project.link %></p>
-    <p><%= project.expiration %></p>
+  <div class="project-content">
+    <%= link_to project.link, :target => '_blank' do %>
+      <h2><%= project.title %></h2>
+      <p><%= project.description %></p>
+      <p><%= project.link %></p>
+      <p><%= project.expiration %></p>
+      <p><%=raw project.all_tags %></p>
+    <% end %>
+  </div>
   <% end %>
 </div>
