add search form for categories

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -6,3 +6,22 @@
   border-bottom: solid;
   border-color: white;
 }
+
+.ao-count {
+  border-bottom: solid;
+  border-color: white;
+  margin-top: 10px;
+}
+
+.ao-search {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  padding: 10px;
+  background: white;
+  opacity: 0.8;
+  border-radius: 15px;
+}
+
+.btn-from-search {
+  border-radius: 15px;
+}
