--- a/app/views/pages/_banner.html.erb
+++ b/app/views/pages/_banner.html.erb
@@ -1,7 +1,7 @@
 <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://www.psychologicalscience.org/redesign/wp-content/uploads/2017/09/PAFF_091117_cooperationreciprocity.jpg');">
   <div class="banner-content">
     <h1>FondaBase</h1>
-    <p>Trouvez facilement les appels à projet de fondations</p>
-    <%= link_to "Commencer la recherche !", projects_path, class: "btn btn-primary btn-lg" %>
+    <p>Trouvez facilement les appels à projet des fondations</p>
+    <%= link_to "Commencer la recherche !", projects_path, class: "btn btn-primary btn-lg btn-banner" %>
   </div>
 </div>
