--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,28 +1,40 @@
 <div class="container">
+  <div class="ao-search">
+    <div>
+      <p>Recherche:</p>
+    </div>
     <div class="form-inputs" id="form">
       <%= simple_form_for @search, method: :get, url: projects_path do |f| %>
           <div>
-            <%= f.input :category, required: false, label: false, collection: @categories, class: 'form-control' %>
+            <%= f.input :category, prompt: "Choisir la catégorie", required: false, label: false, collection: @categories, selected: "", class: 'form-control' %>
           </div>
           <div>
-            <%= f.submit 'GO', class: 'btn btn-primary paddind-categroy ' %>
+            <%= f.submit 'GO', class: 'btn btn-primary paddind-category btn-from-search' %>
           </div>
       <% end %>
     </div>
-<div>
-  <% @projects.each do |project| %>
-    <div class="project-content">
-        <h2><%= project.title %></h2>
-        <p><%= project.description %></p>
-        <p>Date limité de dépôt des projets: <%= project.expiration.strftime('%x') %></p>
-        <p>Catégorie: <%= project.category.title %></p>
-        <p>Fondation: <%= project.fondation.title %></p>
-        <p>Eligible: <%=raw tag_links(project.all_tags)%></p>
-        <p class="text-right"><%= link_to ">> accéder à l'appel à projet", project.link, :target => '_blank' %></p>
-    </div>
-  <% end %>
+  </div>
+  <div class="ao-count">
+    <p><strong>FondaBase contient actuellement : <%= @projects.count %> appels à projet. </strong></p>
+  </div>
+  <div>
+    <% @projects.each do |project| %>
+      <div class="project-content">
+          <h2><%= project.title %></h2>
+          <p><%= project.description %></p>
+          <p>Date limité de dépôt des projets: <%= project.expiration.strftime('%x') %></p>
+          <p>Catégorie: <%= project.category.title %></p>
+          <p>Fondation: <%= project.fondation.title %></p>
+          <p>Eligible: <%=raw tag_links(project.all_tags)%></p>
+          <p class="text-right"><%= link_to ">> accéder à l'appel à projet", project.link, :target => '_blank' %></p>
+      </div>
+    <% end %>
+  </div>
+  <div class="text-center">
+    <%= will_paginate @projects %>
+  </div>
 </div>
-</div>
+
 
 
 
