--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -6,7 +6,7 @@
     <div class="form-inputs" id="form">
       <%= simple_form_for @search, method: :get, url: projects_path do |f| %>
           <div>
-            <%= f.input :category, prompt: "Choisir la catégorie", required: false, label: false, collection: @categories, selected: "", class: 'form-control' %>
+            <%= f.input :category, :include_blank => "Toutes catégories", required: false, label: false, collection: @categories, class: 'form-control' %>
           </div>
           <div>
             <%= f.submit 'GO', class: 'btn btn-primary paddind-category btn-from-search' %>
@@ -22,7 +22,7 @@
       <div class="project-content">
           <h2><%= project.title %></h2>
           <p><%= project.description %></p>
-          <p>Date limité de dépôt des projets: <%= project.expiration.strftime('%x') %></p>
+          <p>Date limité de dépôt des projets: <%= project.expiration.strftime("%d/%m/%Y") %></p>
           <p>Catégorie: <%= project.category.title %></p>
           <p>Fondation: <%= project.fondation.title %></p>
           <p>Eligible: <%=raw tag_links(project.all_tags)%></p>
