added style project-description and project-info into index.html

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -25,3 +25,11 @@
 .btn-from-search {
   border-radius: 15px;
 }
+
+.project-description {
+  font-style: italic;
+}
+
+.project-info span {
+  font-weight: bold;
+}
