--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -15,17 +15,21 @@
     </div>
   </div>
   <div class="ao-count">
-    <p><strong>FondaBase contient actuellement : <%= @projects.count %> appels à projet. </strong></p>
+    <p><strong>FondaBase a trouvé pour vous : <%= @projects.count %> appels à projet. </strong></p>
   </div>
   <div>
     <% @projects.each do |project| %>
       <div class="project-content">
           <h2><%= project.title %></h2>
-          <p><%= project.description %></p>
-          <p>Date limité de dépôt des projets: <%= project.expiration.strftime("%d/%m/%Y") %></p>
-          <p>Catégorie: <%= project.category.title %></p>
-          <p>Fondation: <%= project.fondation.title %></p>
-          <p>Eligible: <%=raw tag_links(project.all_tags)%></p>
+          <div class="project-description">
+            <p><%= project.description %></p>
+          </div>
+          <div class="project-info">
+            <p><span>Date limite de dépôt des projets:</span> <%= project.expiration.strftime("%d/%m/%Y") %></p>
+            <p><span>Catégorie:</span> <%= project.category.title %></p>
+            <p><span>Fondation:</span> <%= project.fondation.title %></p>
+            <p><span>Public(s) Eligible(s):</span> <%=raw tag_links(project.all_tags)%></p>
+          </div>
           <p class="text-right"><%= link_to ">> accéder à l'appel à projet", project.link, :target => '_blank' %></p>
       </div>
     <% end %>
