add cards to homepage , footer

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -15,7 +15,7 @@
     </div>
   </div>
   <div class="ao-count">
-    <p><strong>FondaBase a trouvé pour vous : <%= @projects.count %> appels à projet. </strong></p>
+    <p><strong>Actuellement, <%= @projects.count %> appels à projet sont en cours. </strong></p>
   </div>
   <div>
     <% @projects.each do |project| %>
