--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,6 +1,8 @@
 // Import page-specific CSS files here.
 @import "home";
 @import "banner";
+@import "homecard";
+@import "banner-price";
 
 .project-content {
   border-bottom: solid;
