add eligible search

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -7,6 +7,9 @@
   <%= f.input :link %>
   <%= f.association :fondation %>
   <%= f.association :category %>
-  <%= f.input :all_tags, placeholder: "Tags séparées par une virgule" %>
+  <%= f.association :eligibles, as: :check_boxes %>
   <%= f.button :submit %>
 <% end %>
+
+
+
