--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -9,6 +9,9 @@
             <%= f.input :category, :include_blank => "Toutes catégories", required: false, label: false, collection: @categories, class: 'form-control' %>
           </div>
           <div>
+            <%= f.input :eligible, :include_blank => "Tous publics", required: false, label: false, collection: @eligibles, class: 'form-control' %>
+          </div>
+          <div>
             <%= f.submit 'GO', class: 'btn btn-primary paddind-category btn-from-search' %>
           </div>
       <% end %>
@@ -28,8 +31,11 @@
             <p><span>Date limite de dépôt des projets:</span> <%= project.expiration.strftime("%d/%m/%Y") %></p>
             <p><span>Catégorie:</span> <%= project.category.title %></p>
             <p><span>Fondation:</span> <%= project.fondation.title %></p>
-            <p><span>Public(s) Eligible(s):</span> <%= project.eligibles.name %></p>
-            <p><span>Public(s) Eligible(s):</span> <%=raw tag_links(project.all_tags)%></p>
+            <p><span>Public(s) Eligible(s):</span>
+              <% project.eligibles.to_a.each do |eligible| %>
+                <%= eligible.title %>,
+              <% end %>
+            </p>
           </div>
           <p class="text-right"><%= link_to ">> accéder à l'appel à projet", project.link, :target => '_blank' %></p>
       </div>
