--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -29,11 +29,11 @@
           </div>
           <div class="project-info">
             <p><span>Date limite de dépôt des projets:</span> <%= project.expiration.strftime("%d/%m/%Y") %></p>
-            <p><span>Catégorie:</span> <%= project.category.title %></p>
+            <p><span>Catégorie:</span> <button class="btn btn-xs btn-success disabled"><%= project.category.title %></button></p>
             <p><span>Fondation:</span> <%= project.fondation.title %></p>
             <p><span>Public(s) Eligible(s):</span>
               <% project.eligibles.to_a.each do |eligible| %>
-                <%= eligible.title %>,
+               <button class="btn btn-xs btn-primary disabled""> <%= eligible.title %></button>
               <% end %>
             </p>
           </div>
