add show for projects

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -37,8 +37,7 @@
               <% end %>
             </p>
           </div>
-          <p class="text-right"><%= link_to ">> accéder à l'appel à projet", project.link, :target => '_blank' %></p>
-      </div>
+          <p><%= link_to "+ d'informations", project_path(project) %></p>
     <% end %>
   </div>
   <div class="text-center">
