add favorites model and controller

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,7 @@
 
       <!-- Links when logged in -->
 
-      <%= link_to "Mes appels à projet", "#", class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Mes appels à projet", favorites_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
       <!-- Avatar with dropdown menu -->
       <div class="navbar-wagon-item">
