--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,2 +1,21 @@
-<h1>Projects#show</h1>
-<p>Find me in app/views/projects/show.html.erb</p>
+<div class="container">
+  <h2><%= @project.title %></h2>
+  <p><%= @project.description %></p>
+  <p><span>Date limite de dépôt des projets:</span> <%= @project.expiration.strftime("%d/%m/%Y") %></p>
+  <p><span>Catégorie:</span> <button class="btn btn-xs btn-success disabled"><%= @project.category.title %></button></p>
+  <p><span>Public(s) Eligible(s):</span>
+  <% @project.eligibles.to_a.each do |eligible| %>
+    <button class="btn btn-xs btn-primary disabled""> <%= eligible.title %></button>
+    <% end %>
+  </p>
+  <p><span>Fondation:</span> <%= @project.fondation.title %></p>
+
+  <%- unless current_user.favorite_projects.exists?(id: @project.id) -%>
+<%= link_to 'Add to favorites', favorite_projects_path(project_id: @project), method: :post %>
+<%- else -%>
+<%= link_to 'Remove from favorites', favorite_project_path(@project), method: :delete %>
+<%- end -%>
+
+  <p><%= link_to ">>> retourner à l'index", projects_path %></p>
+  <p class="text-right"><%= link_to ">> accéder à l'appel à projet", @project.link, :target => '_blank' %></p>
+</div>
