change dashboard, front index and link

--- a/app/views/pages/_homecard.html.erb
+++ b/app/views/pages/_homecard.html.erb
@@ -7,12 +7,12 @@
         <p>Trouvez simplement tous les financements et appels à projets parmi 2000 fondations</p>
       </div>
       <div class="col-xs-12 col-md-3">
-        <i class="fa fa-sort-amount-asc fa-4x" aria-hidden="true"></i>
+        <i class="fas fa-filter fa-4x" aria-hidden="true"></i>
         <h2>Filtrez selon vos critères de choix</h2>
         <p>par catégorie, par éligibilité, selon la date limite...</p>
       </div>
       <div class="col-xs-12 col-md-3">
-        <i class="fa fa-floppy-o fa-4x" aria-hidden="true"></i>
+        <i class="far fa-bookmark fa-4x" aria-hidden="true"></i>
         <h2>Enregistrez vos appels à projets</h2>
         <p>Retrouvez facilement les appels à projets qui vous intéresse</p>
       </div>
