--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -5,15 +5,18 @@
     </div>
     <div class="form-inputs" id="form">
       <%= simple_form_for @search, method: :get, url: projects_path do |f| %>
-          <div>
-            <%= f.input :category, :include_blank => "Toutes catégories", required: false, label: false, collection: @categories, class: 'form-control' %>
-          </div>
-          <div>
-            <%= f.input :eligible, :include_blank => "Tous publics", required: false, label: false, collection: @eligibles, class: 'form-control' %>
-          </div>
-          <div>
-            <%= f.submit 'GO', class: 'btn btn-primary paddind-category btn-from-search' %>
-          </div>
+      <div>
+        <%= f.input :category, :include_blank => "Toutes catégories", required: false, label: false, collection: @categories, class: 'form-control' %>
+      </div>
+      <div>
+        <%= f.input :eligible, :include_blank => "Tous publics", required: false, label: false, collection: @eligibles, class: 'form-control' %>
+      </div>
+      <div>
+        <%= link_to "Date limite proche", sort: "expiration ASC" %> <%= link_to "Date limite eloignée", sort: "expiration DESC" %>
+      </div>
+      <div>
+        <%= f.submit 'GO', class: 'btn btn-primary paddind-category btn-from-search' %>
+      </div>
       <% end %>
     </div>
   </div>
@@ -22,50 +25,58 @@
   </div>
   <div>
     <% @projects.each do |project| %>
-      <div class="project-content">
-            <div class="row">
-    <div class="col-lg-11">
-      <h2><%= project.title %></h2>
-    </div>
-    <div class="col-lg-1">
-      <%- unless current_user.favorite_projects.exists?(id: project.id) -%>
-        <%= link_to favorite_projects_path(project_id: project), method: :post do %>
+    <div class="project-content">
+      <div class="row">
+        <div class="col-lg-11">
+          <h2><%= project.title.mb_chars.upcase %></h2>
+        </div>
+        <div class="col-lg-1">
+          <%- unless current_user.favorite_projects.exists?(id: project.id) -%>
+          <%= link_to favorite_projects_path(project_id: project), method: :post do %>
           <i class="far fa-bookmark fa-2x align-middle" style="color:#DE6860"></i>
-        <% end %>
-      <%- else -%>
-        <%= link_to favorite_project_path(project), method: :delete do %>
+          <% end %>
+          <%- else -%>
+          <%= link_to favorite_project_path(project), method: :delete do %>
           <i class="fas fa-bookmark fa-2x" style="color: #DE6860"></i>
-        <% end %>
-      <%- end -%>
-    </div>
-  </div>
-          <div class="project-description">
-            <p><%= project.description %></p>
-          </div>
-          <div class="project-info">
-            <p><span>Date limite de dépôt des projets:</span> <%= project.expiration.strftime("%d/%m/%Y") %></p>
-            <p><span>Catégorie:</span> <button class="btn btn-xs btn-success disabled"><%= project.category.title %></button></p>
+          <% end %>
+          <%- end -%>
+        </div>
+      </div>
+      <div class="project-description">
+        <p><%= project.description %></p>
+      </div>
+      <div class="project-info">
+        <div class="row">
+          <div class="col-md-6">
             <p><span>Fondation:</span> <%= project.fondation.title %></p>
-            <p><span>Public(s) Eligible(s):</span>
+          </div>
+          <div class="col-md-6">
+            <p><span>Catégorie:</span> <button class="btn btn-xs btn-success disabled"><%= project.category.title %></button></p>
+          </div>
+          <div class="col-md-6">
+            <p><span>Date limite de dépôt des projets:</span> <%= project.expiration.strftime("%d/%m/%Y") %></p>
+          </div>
+          <div class="col-md-6">
+            <p>
+              <span>Public(s) Eligible(s):</span>
               <% project.eligibles.to_a.each do |eligible| %>
-               <button class="btn btn-xs btn-primary disabled""> <%= eligible.title %></button>
+                <button class="btn btn-xs btn-primary disabled""> <%= eligible.title %></button>
               <% end %>
             </p>
           </div>
-          <p>
-            <%= link_to project_path(project) do %>
-              <i class="fas fa-info"></i>+ d'information
-            <% end %>
-          </p>
-        </div>
-    <% end %>
+      </div>
+    </div>
+    <div class="more-information">
+      <p>
+        <%= link_to project_path(project) do %>
+        <i class="fas fa-info"></i>+ d'information
+        <% end %>
+      </p>
+    </div>
   </div>
-  <div class="text-center">
-    <%= will_paginate @projects %>
-  </div>
+  <% end %>
 </div>
-
-
-
-
-
+<div class="text-center paginate">
+  <%= will_paginate @projects %>
+</div>
+</div>
