--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -54,8 +54,10 @@
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
         <li><%= link_to "Mes favoris", favorites_path(@projects) %></li>
+        <% if user_signed_in? %>
         <% if current_user.admin == true %>
           <li><%= link_to "Admin", admin_root_path %></li>
+        <% end %>
         <% end %>
       </ul>
     </div>
