change sort by date css

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -54,3 +54,21 @@ button {
 .more-information {
   font-size: 12px;
 }
+
+.sort-expiration {
+  font-size: 14px;
+  background: white;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  .sort-link {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+.favori-title {
+  background: white;
+  border-radius: 15px;
+  padding: 10px;
+}
+
