--- a/app/views/favorite_projects/index.html.erb
+++ b/app/views/favorite_projects/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2 class="text-center">Mes favoris</h2>
+  <h2 class="text-center favori-title">Mes favoris</h2>
   <p>
     <%= link_to projects_path do %>
       <i class="fas fa-undo-alt"></i> Retourner à l'index
