--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -12,6 +12,9 @@
         <%= f.input :eligible, :include_blank => "Tous publics", required: false, label: false, collection: @eligibles, class: 'form-control' %>
       </div>
       <div>
+        <%= text_field_tag :query, params[:query], placeholder: "Recherche par mot clé...", class: 'form-control' %>
+      </div>
+      <div>
         <%= f.submit 'GO', class: 'btn btn-primary paddind-category btn-from-search' %>
       </div>
       <% end %>
