add feature counter fondations and projects to homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,7 @@
 <%= render 'banner' %>
+<div class="text-center">
+  <span><%= @fondations.count %> fondations</span> et
+  <span><%= @projects.count %> financements sur Fondabase !</span>
+</div>
 <%= render 'homecard' %>
 <%= render 'banner-price' %>
