add tag new project and alert expiration to project

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -72,3 +72,14 @@ button {
   padding: 10px;
 }
 
+.project-expiration {
+  font-size: 12px;
+  color: red;
+}
+
+.project-new {
+  font-size: 12px;
+  color: blue;
+}
+
+
