config mailer for all users when project created

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,6 +15,11 @@
           <i class="fas fa-unlock-alt"></i> Admin
         <% end %>
       <% end %>
+
+      <%= link_to projects_path, class: "navbar-wagon-item navbar-wagon-link" do %>
+        <i class="fas fa-search"></i> Recherche
+      <% end %>
+
       <%= link_to favorites_path, class: "navbar-wagon-item navbar-wagon-link" do %>
         <i class="far fa-bookmark"></i> Mes favoris (<%= @favorite_projects.count %>)
       <% end %>
