--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -48,15 +48,21 @@
           <% end %>
           <h2><%= project.title.mb_chars.upcase %></h2>
         </div>
-        <div class="col-lg-1">
+        <div class="col-lg-1" id="div-favori">
           <% unless current_user.favorite_projects.exists?(id: project.id) %>
           <%= link_to favorite_projects_path(project_id: project), method: :post do %>
           <i class="far fa-bookmark fa-2x align-middle" style="color:#DE6860"></i>
           <% end %>
+            <span id="add-favoris">
+              Ajouter à mes favoris
+            </span>
           <% else %>
           <%= link_to favorite_project_path(project), method: :delete do %>
           <i class="fas fa-bookmark fa-2x" style="color: #DE6860"></i>
           <% end %>
+          <span id="add-favoris">
+              Supprimer de mes favoris
+          </span>
           <% end %>
         </div>
       </div>
