--- a/app/views/favorite_projects/index.html.erb
+++ b/app/views/favorite_projects/index.html.erb
@@ -7,7 +7,13 @@
   </p>
 
   <% if @projects.blank? %>
-    <p>Vous n'avez pas d'appels à projet de sauvegardé.</p>
+      <div class="text-center">
+        <i class="fas fa-exclamation-circle fa-2x"></i>
+        <i class="far fa-frown fa-2x"></i>
+        <span> Vous n'avez pas sauvegardé d'appels à projet </span>
+        <i class="far fa-frown fa-2x"></i>
+        <i class="fas fa-exclamation-circle fa-2x"></i>
+      </div>
   <% end %>
   <div>
     <% @projects.each do |project| %>
