--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,7 @@
 
       <!-- Links when logged in -->
       <% if current_user.admin == true %>
-        <%= link_to admin_root_path, class: "navbar-wagon-item navbar-wagon-link" do %>
+        <%= link_to admin_root_path, class: "navbar-wagon-item navbar-wagon-link", target:"_blank" do %>
           <i class="fas fa-unlock-alt"></i> Admin
         <% end %>
       <% end %>
