config create, index and destroy alerte publication

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,6 +16,10 @@
         <% end %>
       <% end %>
 
+        <%= link_to publications_path, class: "navbar-wagon-item navbar-wagon-link" do %>
+          <i class="far fa-bell"></i> Mes alertes
+        <% end %>
+
       <%= link_to projects_path, class: "navbar-wagon-item navbar-wagon-link" do %>
         <i class="fas fa-search"></i> Recherche
       <% end %>
